# ESP32-IDF-Features-Test

BLE_SPP_SERVER/: sdkconfig
BLE_SPP_SERVER/main/: main.c
BLE_SPP_SERVER/main/BLE_SPP_Server/: BLE_SPP_Def.h  BLE_SPP_Server.c  BLE_SPP_Server.h
WebSocket/: sdkconfig  ws_echo_server.c
WebSocket/WIFI/: WIFI.c  WIFI.h
WebSocket_NetConn/main/: CMakeLists.txt  main.c
WebSocket_NetConn/main/Server/: Server.c  Server.h
WebSocket_NetConn/main/WIFI/: WIFI.c  WIFI.h
WebSocket_NetConn/main/WebSocket/: WebSocket.c  WebSocket.h
WebSocket_NetConn/main/WebSocket_Server/: WebSocket_Server.c  WebSocket_Server.h
